 - [ZBXNEXT-672] advanced options for remote commands (Aly, asaveljevs, Sasha, Vedmak)
 - [ZBX-1357] updated Latvian, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBX-2756] renamed macro {TRIGGER.KEY<1-9>} to {ITEM.KEY<1-9>} (asaveljevs)
 - [ZBXNEXT-511] renamed item description to name, for description introduced new field (asaveljevs, Vedmak)

Bug fixes:
 - [ZBX-3709] fixed agree checkbox in setup (Vedmak)
 - [ZBX-3658] fixed the whole request to Java proxy failing if it contains an invalid key (asaveljevs)
 - [ZBX-3657] fixed errors while updating proxy configuration data (Sasha)
 - [ZBX-3656] fixed item filter by data type boolean (Vedmak)
 - [ZBX-3620] fixed error when delete application used in webscenario (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.3

New features:
 - [ZBXNEXT-555] added remote monitoring of JMX counters through Java proxy (asaveljevs,Vedmak,Vlad)
 - [ZBXNEXT-651] added "Boolean" data type for integer item value type (asaveljevs,Vedmak,Vlad)
 - [ZBXNEXT-675] added new icons and a script to create sql file (Elvis,Richlv)
 - [ZBX-1357] Updated Latvian and Russian translations; thanks to Zabbix translators (Richlv)
 - [ZBXNEXT-696] Added support for {IPADDRESS}, {HOST.DNS} and {HOST.CONN} macros in trigger names (rudolfs)
 - [ZBX-3495] fixed interfaceid updated to null when link template (Vedmak)
 - [ZBXNEXT-676] merged host profile and extended host profile (Sasha, Vedmak)

Bug fixes:
 - [ZBX-3623] fixed processing of nanoseconds for history data (Sasha)
 - [ZBX-3634] improved zabbix map API methods (Aly)
 - [ZBX-3579] fixed trigger popup menu in status of triggers (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.2

New features:
 - [ZBXNEXT-673] added support of users scripts on Zabbix Agent and IPMI-based remote commands (Sasha, Vedmak)